test/sema/negative/no_ret1.output
no_ret1.impala:2 col 18 - 21: error: mismatched types: expected 'i32' but found '<no-return>' as  type.
